--- a/Laboration 2/LaborationII.tex
+++ b/Laboration 2/LaborationII.tex
@@ -14,6 +14,10 @@
 \setcounter{questioncounter}{0}
 \setcounter{exercisecounter}{0}
 
+\newlength\tindent
+\setlength{\tindent}{\parindent}
+\setlength{\parindent}{0pt}
+\renewcommand{\indent}{\hspace*{\tindent}}
 
 % Questions
 \newcommand{\question}[1]{
@@ -49,7 +53,7 @@
 
 \begin{document}
 
-  \title{Labb II -Ordo, sortering och sökning }
+  \title{Labb III -Ordo, sortering och sökning }
   \author{ Algoritmer och datastrukturer | Uppsala Universitet | VT15 }
   \date{}
   \maketitle
@@ -60,7 +64,8 @@
    man verkligen förstår hur sorteringsalgoritmerna fungerar, så använd papper och penna!
    Att bara skriva in kod utan att förstå de mekaniska inslagen som utförs resulterar enkom i
    framtida bekymmer (bl a på tentamen). Vidare är det viktigt att förstå hur man använder
-   stora ordo och att vara noga med att visa alla uträkningar. 
+   stora ordo och att vara noga med att visa alla uträkningar. I denna laboration så skall ni endast lämna in en teoretisk inlämning. Frågorna som skall besvaras är märkt som \textbf{Inlämningsfråga x}. Lämna in även ert kodprojekt med den kod som ni använt er av under laborationen.
+   
 
 
 
@@ -71,9 +76,11 @@
   program ökar med stigande input (n). För varje nedanstående kodsnutt ska ni ange dess
   Ordo. Detta kan ni göra på flertalet sätt. Genom att definiera ett polynom som beskriver
   hur komplexiteten (antal varv i looparna) beror på input (n) eller genom att för varje loop
-  i programmet motivera dess Ordo och sedan ange och motivera hela programmets Ordo.
-  Ange ordo för följande kodsnuttar. Redovisa alla uträkningar och motivera
-  resultaten.
+  i programmet motivera dess Ordo och sedan ange och motivera hela programmets Ordo. \\
+  
+  \textbf{Inlämningsfråga 1}: Ange ordo för följande kodsnuttar. Redovisa alla uträkningar och motivera resultaten.
+  
+  
   
   
    \begin{lstlisting}
@@ -116,6 +123,8 @@
     \end{tabular}
   \end{center}
   Låt oss definiera följande funktioner: \\
+  
+
  \begin{center}
  \begin{tabular}{ l }
 	$f(n) = 0.001n^2 + n + 100$ \\
@@ -124,6 +133,7 @@
 	$q(n) = n^2 + 26n + 2988$\\\\
 	\end{tabular}
  \end{center} 
+ \textbf{Inlämningsfråga 2} : Ange och motivera ordo för ovanstående funktioner. \\\\
   Kom ihåg att ordo är det värsta tänkbara fallet. Det finns även inversen av ordo som betecknas med stora omega $\Omega$ alltså den bästa tänkbara tiden. Viktigt att förstå att det är vi som implementerar algoritmerna som kan påverka $\mathcal{O}$ och $\Omega$. Betrakta nedanstående kod. Som den är utformad nu så är Search en algortitm är  $T(n)$ $\in$ $\Omega  (n)$ och $T(n)$ $\in$ $\mathcal{O}(n)$. Din uppgift blir helt enkelt att få algoritmen sådan att den uppfyller  $T(n)$ $\in$ $\Omega(1)$.
   \begin{lstlisting}
 public bool Search(int number, int[] numbers){
@@ -136,39 +146,34 @@ public bool Search(int number, int[] numbers){
                }
          }
      return found; 
-   }
+}
    \end{lstlisting}
   
-   \section*{Ordo - Del 3
-      }
+  \textbf{Inlämningsfråga 3}: Hur ser din kod ut för att få algoritmen att uppfylla $T(n)$ $\in$ $\Omega(1)$? Förklaring krävs för godkänt! \\\\
 
-  Ytterliggare uppgifter som är på en högre abstraktionsnivå.
-  \begin{enumerate}
-  
-   
-      \item Ponera att vi har två algoritmer $A_1$ och $A_2$ där  $A_1$ $\in$ $\Omega (n)$ och  $A_2$ $\in$ $\mathcal{O}(n^2)$ som avgör huruvida ett tal $n$ är ett primtal eller ej. Du är i behov av just en sådan algoritm. Vilken av dem bör du införskaffa givet den information du har? Motivera ditt svar.
+      \textbf{Inlämningsfråga 4}: Ponera att vi har två algoritmer $A_1$ och $A_2$ där  $A_1$ $\in$ $\Omega (n)$ och  $A_2$ $\in$ $\mathcal{O}(n^2)$ som avgör huruvida ett tal $n$ är ett primtal eller ej. Du är i behov av just en sådan algoritm. Vilken av dem bör du införskaffa givet den information du har? Motivera ditt svar.\\\\
 	      
-      \item Du väljer en av algoritmerna i föregående fråga och en kamrat väljer den andra. Ni
+      \textbf{Inlämningsfråga 5}: Du väljer en av algoritmerna i föregående fråga och en kamrat väljer den andra. Ni
       testkör era algoritmer på en stor mängd tal. Ingen skillnad i körtid noteras. Hur är
       detta möjligt? Antag att all hårdvara och mjukvara utöver just algoritmerna som testas
       är ekvivalenta.
       
-    \end{enumerate}
+   
 \section*{Sortering}
-För att få förståelse för sortering och hur kostsamt det är så går denna labb ut på att experimentera hur lång den faktiska tiden är för att sortera. Vi utgår från att ni läser på teorin på Quicksort och Bubblesort och förstår hur detta görs manuellt. För uppgiften på denna labb så kommer ni inte behöva implementera detta själva utan kan använda er av koden från föreläsningarna. Ni har fått kod från föreläsningen på Quicksort och Bubblesort. Vi skall alltså ta och utföra 5 körningar av varje sortering med x st element i varje lista och ta fram den exakta körtiden för varje körning. Nedan följer en mer steg för steg beskrivning.
+Vi sa tidigare att vi inte är intresserade av den faktiska tiden en algoritm tar. Dock skall vi i denna uppgift kolla på de faktiska tiderna för sortering. Vi utgår från att ni läser på teorin på Quicksort och Bubblesort och förstår hur detta görs manuellt (det är en typsik tentamensfråga att kunna sortera med papper och pennga). För uppgiften på denna labb så kommer ni inte behöva implementera detta själva utan kan använda er av koden från föreläsningarna. Ni har fått kod från föreläsningen på Quicksort och Bubblesort. Vi skall alltså ta och utföra ca 5 körningar (eller så många gånger så att ni märker av en skillnad) av varje sortering med x st element (där x är ökas vid varje experiment - Hur mycket den ska ökas är ditt jobb att ta reda på ) i varje lista och ta fram den exakta körtiden för varje körning. Nedan följer en mer steg för steg beskrivning.
 
 \begin{enumerate}
 \item Börja med att skapa upp en consol-applikation i VS. I den så klistrar du in de metoder du fått från föreläsningen (dvs Bubblesort och Quicksort). Ta inte det som finns i main-metoden (om du inte vill testa din metod - då är det fritt fram).
 \item Skapa en metod som retunerar en array med slumpade nummer i. Man skall när man anropar metoden kunna ange hur stor och hur många element som skall finnas i arrayen. 
-\item (frivilligt) Skapa gärna en metod som kan skriva ut en array i consolen. 
-\item För att kunna ta tid skall ni använda er av $Stopwath$ förklaring hur man använder denna klass finns här: http://www.dotnetperls.com/stopwatch.
+\item (frivilligt) Skapa gärna en metod som kan skriva ut en array i consolen. Alternativt använda debuggern.
+\item  Testa nu att bara sortera en av dina osorterade arrayer så att du ser att det funkar.
+\item För att kunna ta tid på hur lång tid era algoritmer tar skall ni använda er av $Stopwath$ förklaring hur man använder denna klass finns här: http://www.dotnetperls.com/stopwatch.
 \item Innan vi nu använder våra sorteringsalgoritmer så skall ni i början av Quicksort och Bubblesort starta klockan och stoppa den när den är klar med sorteringen. Sedan skall den sist i metoderna skriva ut vilken tid det tog.
-\item Innan vi endast börjar kolla tiderna så kan du med fördel prova att skriva ut den osorterade arrayen för att sedan skriva ut den sorterade för att se att den gör rätt (med andra ord att du inte förstört något).
-\item Nu är det dags att testa. Testa att först köra bubblesort och Quicksort på 10 element för att sedan börja utöka antal element. VARNING: Redan vid 100000 element börjar det bli slött och ni kan få vänta länge! Öka $n$ långsamt! Ni får själva söka upp IT-Avdelningen utifall datorn låser sig.
+\item Nu är det dags att testa. Testa att först köra bubblesort och Quicksort på 10 element för att sedan börja utöka antal element. VARNING: Redan vid 100 000 element börjar det bli slött och ni kan få vänta länge! Öka $n$ långsamt! Ni får själva söka upp IT-Avdelningen utifall datorn låser sig.
 \item För varje test skriver ni ner på ett papper vilken sorteringsalgoritm och hur många element du hade och sedan hur lång tid det tog.
 \end{enumerate}
 
-Du bör nu ha fått en ganska klar analys om vad som hände och varför? Vilken algoritm var bäst? 
+\textbf{Inlämningsfråga 6}: Rita upp en tabell där det framgår hur många element ni körde och hur lång tid det tog med bubblesort och quicksort på respektive körning (minst 5). \\\\
 
 Det roliga stannar inte här utan nu skall vi göra ett ytterligare experiment. Från föreläsningen bör du fått veta om att Quicksort använder sig av Pivot-element. I den algoritmen som du har så tas pivot-element från mitten och nu skall du ändra den kodraden till att ta pivot-elementet längst till vänster. Alltså denna rad\\
 
@@ -177,27 +182,31 @@ $x = data[(l + r) / 2]; /* find pivot item */$ \\
 ändrar vi till: \\\\
 $x = data[l]; /* find pivot item */$ \\
 
-(Kommentera ut din kodrad som sorterar med bubblesort) - kunde du se någon skillnad i din körning? Tog den längre tid? Lägg nu till en kodrad där du sorterar samma lista igen (alltså skickar in din sorterade lista att sorteras igen) - vad hände?
+Kör quicksort på samma antal element du körde i förra experimentet. skriv upp antal element och körtiden. \\\\
 
-Ändra nu tillbaka till: \\
+\textbf{Inlämningsfråga 7}: Blev det någon skillnad på quicksort genom att ändra valet av pivot-element?  \\\\
 
-$x = data[(l + r) / 2]; /* find pivot item */$ \\
+Kör nu quicksort igen men på en redan sorterad lista. på samma antal element som föregående experiment. \\\\
 
-Vad händer nu? Spelar det någon roll hur vi väljer Pivot-element? Isåfall när spelar det roll? 
+\textbf{Inlämningsfråga 8}: Blev det någon skillnad på quicksort genom att ändra valet av pivot-element och köra på sorterad lista?  \\\\
+
+\textbf{Inlämningsfråga 9}: Förklara varför det är skillnader mellan Bubblesort och Quicksort (Hint: Vad har de olika algoritmerna för Omega respektive ordo?). Varför skiljer det sig när man flyttar pivotelementet och kör på sorterad lista? (Hint: hur funkar quicksort?)
 
 
 \section*{Sökning}
-Ett vanligt problem är att man har en samling $S$, exempelvis en array, med element där man
-frågar sig huruvida ett element $e$ ingår i $S$ eller ej. Skriv en funktion i C\# som tar emot en sorterad lista och utför en binär sökning. Signaturen bör således vara något likt $f(int[ ] A, int a) $ där $a$ är elementet vi söker.
-\begin{enumerate}
-\item Skriv en naiv lösning på sökproblemet i en array. Med "naiv" avses här en for -loop
+Ett vanligt problem är att man har en samling $S$, exempelvis en array, med element där man frågar sig huruvida ett element $e$ ingår i $S$ eller ej. Skriv en funktion i C\# som tar emot en sorterad lista och utför en binär sökning. Signaturen bör således vara något likt $f(int[ ] A, int a) $ där $a$ är elementet vi söker.
+
+Skriv även en naiv lösning på sökproblemet i en array. Med "naiv" avses här en for -loop
 som går igenom samtliga element från början till slut i arrayen och utför en check för
-varje element. Testkör sedan funktionen på en relativt stor array du slumpat fram. Vad
-är ordo?
-\item Testkör din binära sökfunktion på samma array som ovan. Vad händer? Varför?
-\item Sortera arrayen med quicksort eller bubble sort innan du kör den binära sökningen.
-Vad är ordo nu? Motivera!
-\item Ar det bättre att sortera en array och använda den binära sökningen eller att använda
+varje element. Testkör sedan funktionen på en relativt stor array du slumpat fram. \\\\
+\textbf{Inlämningsfråga 10}: Vad är ordo för din naiva lösning? \\\\
+Testkör din binära sökfunktion på en slumpad array. 
+\\\\
+
+\textbf{Inlämningsfråga 11}: Vad hände när du försökte köra din sökning på den slumpade arrayen och varför?\\\\
+Sortera arrayen med quicksort eller bubble sort innan du kör den binära sökningen. \\\\
+\textbf{Inlämningsfråga 12}:Vad är ordo nu? Motivera! \\\\
+\textbf{Inlämningsfråga 13}:Ar det bättre att sortera en array och använda den binära sökningen eller att använda
 den naiva lösningen direkt? Motivera!
-\end{enumerate}
+
 \end{document}
